--- a/public/CV.html
+++ b/public/CV.html
@@ -76,7 +76,7 @@ I like to share my experience and help other people become better programmers by
   <tr>
     <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
       <strong>
-        Javascript + jQuery + HTML + CSS
+        Javascript + jQuery + React + HTML + CSS
       </strong>
     </td>
     <td style="padding-bottom: 0.5em; vertical-align:top; ">
@@ -95,22 +95,22 @@ I like to share my experience and help other people become better programmers by
     </td>
   </tr>
 
+<!--  <tr>-->
+<!--    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">-->
+<!--      <strong>-->
+<!--        Templating-->
+<!--      </strong>-->
+<!--    </td>-->
+<!--    <td style="padding-bottom: 0.5em; vertical-align:top; ">-->
+<!--       Created <a href="https://github.com/Danack/Jig">Jig templating library</a>, to allow dependency injection of objects directly from templates. Previously implemented Smarty templating to allow designers to create reusable web pages elements, and a framework to load the required pages, Javascript and CSS in a reliable design.-->
+<!--    </td>-->
+<!--  </tr>-->
+<!--  -->
+  
   <tr>
     <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
       <strong>
-        Templating
-      </strong>
-    </td>
-    <td style="padding-bottom: 0.5em; vertical-align:top; ">
-       Created <a href="https://github.com/Danack/Jig">Jig templating library</a>, to allow dependency injection of objects directly from templates. Previously implemented Smarty templating to allow designers to create reusable web pages elements, and a framework to load the required pages, Javascript and CSS in a reliable design.
-    </td>
-  </tr>
-  
-  
-  <tr>
-    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
-      <strong>
-        Automation with Ant/Bash/Chef/Puppet
+        Automation with Ant, Bash, Chef, Puppet, Travis, Jenkins
       </strong>
     </td>
     <td style="padding-bottom: 0.5em; vertical-align:top; ">
@@ -235,7 +235,7 @@ I like to share my experience and help other people become better programmers by
 
 <h1>Career to date</h1>
 
-<h2>Open source development - previous to current</h2>
+<h2>Open source development</h2>
 
 <h3>PHP Imagick + Gmagick extensions</h3>
 
@@ -259,12 +259,46 @@ Developed the Jig templating library. This is a lightweight templating system th
 
 </p>
 
-<h3>Tier</h3>
+<!--<h3>Tier</h3>-->
 
+<!--<p>-->
+<!--Developed the Tier 'application runner' framework. Tier is a new approach to structuring PHP applications to avoid monolithic frameworks, and allow multiple dispatch inside an application, which allows 'tiers' of code to be developed in a way that make it easy to write high-performance, easy-to-test code.-->
+<!--&lt;!&ndash;   Very minimal documentation is available at <a href="http://tier.phpjig.com/">tier.phpjig.com</a> &ndash;&gt;-->
+<!--</p>-->
+
+
+<h2>OpenSourceFees Jan 2019 - Present</h2>
 <p>
-Developed the Tier 'application runner' framework. Tier is a new approach to structuring PHP applications to avoid monolithic frameworks, and allow multiple dispatch inside an application, which allows 'tiers' of code to be developed in a way that make it easy to write high-performance, easy-to-test code.
-<!--   Very minimal documentation is available at <a href="http://tier.phpjig.com/">tier.phpjig.com</a> -->
+  Created a custom platform to attempt to make Open Source development more sustainable. More details to be announced soon.
 </p>
+
+<h2>Hello Future March 2017 - November 2018</h2>
+
+<h3>Dijon Platform - https://dijonplatform.com/gb-en</h3>
+
+<p>Created a custom platform to be used for charities for fund-raising.</p>
+
+<ul>
+  <li>Designed and implemented high performance PHP CMS to be used for making donations and registering users. The system allows each site to be fully customised by clients while still be deployed as part of a single scalable system.</li>
+  <li>Configured JavaScript + CSS build system using Webpack + Yarn.</li>
+  <li>Using Docker built standardised local development setup.</li>
+</ul>
+
+<h3>Aitekz finance</h3>
+<p>
+Led a small team of developers in migrating a legacy application to Google Cloud Engine and replace the old UI with a React JS based UI.
+</p>
+
+<h2>Immediate media - March 2016 - February 2017</h2>
+
+<ul>
+  <li>Worked as part of Immediate Media's sports focused team to maintain their custom CMS.</li>
+  <li>
+    Designed and built a prototype for a large api to be used for more engaging content related to cycling races.
+  </li>
+
+  <li>Learned valuable lessons in migrating large systems.</li>
+</ul>
 
 
 <h2>Dialogue Communications Pty. Ltd. January 2008 - August 2012</h2>
