--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 
 <h2>Draft talks</h2>
 
-<a href="/BackgroundWorkers/">Background workers</a> <br/>
+<a href="/BackgroundWorkers/index.php">Background workers</a> <br/>
 
 <a href="/SolidStructure/">Solid structure</a> <br/>
 
