--- a/public/CV.html
+++ b/public/CV.html
@@ -20,7 +20,7 @@
 As the maintainer of two PHP extensions, I have a deep understanding of PHP internals and how to handle bug reports without causing compatibility problems for existing users.
       </p>
 <p>  
-I like to share my experience and help other people become better programmers by giving talks and helping people online.
+I like to share my experience and help other people become better programmers by giving talks, which have included speaking at PHPNW, PHPSC and the Dutch PHP conferences, and helping people online.
 </p>
 
         <!-- 
@@ -42,7 +42,7 @@ I like to share my experience and help other people become better programmers by
 </table>
 
 
-<h2>Technology I use and like</h2>
+<h2>Technology experience</h2>
 
 <table>
   <tbody>
@@ -70,6 +70,18 @@ I like to share my experience and help other people become better programmers by
     </td>
     <td style="padding-bottom: 0.5em; vertical-align:top; ">
       MySQL table and query design for medium sized website with moderate load, to allow responsive user experience.
+    </td>
+  </tr>
+
+
+  <tr>
+    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
+      <strong>
+        Docker + containers
+      </strong>
+    </td>
+    <td style="padding-bottom: 0.5em; vertical-align:top; ">
+      I use Docker containers to allow projects to have single step setup for local development, while still closely matching the production environment.
     </td>
   </tr>
 
@@ -126,12 +138,7 @@ I like to share my experience and help other people become better programmers by
     </td>
   </tr>
 
-  </tbody>
-</table>
 
-<h2>Other technology I have used</h2>
-<table>
-  <tbody>
   <tr>
     <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
       <strong>
@@ -139,7 +146,7 @@ I like to share my experience and help other people become better programmers by
       </strong>
     </td>
     <td style="padding-bottom: 0.5em; vertical-align:top; ">
-      Five years of commercial development. Good understanding of C/C++ compiler technology
+      Five years of commercial development and five years of Open Source development. Good understanding of C/C++ compiler technology
     </td>
   </tr>
 
@@ -154,16 +161,6 @@ I like to share my experience and help other people become better programmers by
     </td>
   </tr>
 
-  <tr>
-    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
-      <strong>
-        WAP/XHTML
-      </strong>
-    </td>
-    <td style="padding-bottom: 0.5em; vertical-align:top; ">
-      Developed wapsites that used content adaption to optimise user experience based on handset capabilities.
-    </td>
-  </tr>
   </tbody>
 </table>
 
@@ -213,7 +210,7 @@ I like to share my experience and help other people become better programmers by
       </strong>
     </td>
     <td style="padding-bottom: 0.5em; vertical-align:top; ">
-      Amongst the tools I've used are Wireshark, Bugzilla, PR-tracker database, Footprints, IntelliJ Idea, Visual Studio, Visual Source Safe user/administrator, Subversion, Git, PHPStorm, Metrowerks CodeWarrior, InstallShield, Microsoft Visual Sourcesafe, Subversion, CVS, Git, strace, valgrind, gdb.
+      Amongst the tools I've used are Wireshark, Bugzilla, PR-tracker database, Footprints, IntelliJ Idea, Visual Studio, Visual Source Safe user/administrator, Subversion, Git, PHPStorm, Metrowerks CodeWarrior, InstallShield, Microsoft Visual Sourcesafe, Subversion, CVS, Git, strace, valgrind, gdb, Docker, Travis, Jenkins.
     </td>
   </tr>
 
@@ -224,7 +221,7 @@ I like to share my experience and help other people become better programmers by
       </strong>
     </td>
     <td style="padding-bottom: 0.5em; vertical-align:top; ">
-      Integrated continuous build and automated test systems with Cruise Control with Ant for rapid detection of
+      Integrated continuous build and automated test systems with various CI systems for rapid detection of
       development issues.
     </td>
   </tr>
@@ -251,12 +248,12 @@ Developed a website <a href='http://phpimagick.com/'>phpmagick.com</a> to show w
 Auryn <a href="https://github.com/rdlowrey/auryn">github.com/rdlowrey/auryn</a> is a recursive dependency injector, that can be used to bootstrap and wire together S.O.L.I.D. PHP applications. I helped design how this D.I.C. should work, as well as provide bug-fixes and write test cases. I spoke at the PHP South Coast confernce 2015 about how dependency injection makes code better. 
 </p>
 
-<h3>Jig</h3>
+<!--<h3>Jig</h3>-->
 
-<p>
-Developed the Jig templating library. This is a lightweight templating system that uses dependency injection to allow 'views' to be a first class layer inside PHP applications. The documentation is available at <a href="http://phpjig.com">phpjig.com</a>.
+<!--<p>-->
+<!--Developed the Jig templating library. This is a lightweight templating system that uses dependency injection to allow 'views' to be a first class layer inside PHP applications. The documentation is available at <a href="http://phpjig.com">phpjig.com</a>.-->
 
-</p>
+<!--</p>-->
 
 <!--<h3>Tier</h3>-->
 
@@ -266,12 +263,12 @@ Developed the Jig templating library. This is a lightweight templating system th
 <!--</p>-->
 
 
-<h2>OpenSourceFees Jan 2019 - Present</h2>
+<h2>OpenSourceFees March 2019 - Present</h2>
 <p>
   Created a custom platform to attempt to make Open Source development more sustainable. More details to be announced soon.
 </p>
 
-<h2>Hello Future March 2017 - November 2018</h2>
+<h2>Hello Future March 2017 - February 2019</h2>
 
 <h3>Dijon Platform - https://dijonplatform.com/gb-en</h3>
 
@@ -280,7 +277,7 @@ Developed the Jig templating library. This is a lightweight templating system th
 <ul>
   <li>Designed and implemented high performance PHP CMS to be used for making donations and registering users. The system allows each site to be fully customised by clients while still be deployed as part of a single scalable system.</li>
   <li>Configured JavaScript + CSS build system using Webpack + Yarn.</li>
-  <li>Using Docker built standardised local development setup.</li>
+  <li>Using Docker, built standardised local development setup.</li>
 </ul>
 
 <h3>Aitekz finance</h3>
@@ -288,7 +285,7 @@ Developed the Jig templating library. This is a lightweight templating system th
 Led a small team of developers in migrating a legacy application to Google Cloud Engine and replace the old UI with a React JS based UI.
 </p>
 
-<h2>Immediate media - March 2016 - February 2017</h2>
+<h2>Immediate Media March 2016 - March 2017</h2>
 
 <ul>
   <li>Worked as part of Immediate Media's sports focused team to maintain their custom CMS.</li>
@@ -296,7 +293,7 @@ Led a small team of developers in migrating a legacy application to Google Cloud
     Designed and built a prototype for a large api to be used for more engaging content related to cycling races.
   </li>
 
-  <li>Learned valuable lessons in migrating large systems.</li>
+  <li>Planned and started the migration of a legacy site to a centralised platform.</li>
 </ul>
 
 
