removed some words

--- a/public/CV.html
+++ b/public/CV.html
@@ -119,24 +119,24 @@ I like to share my experience and help other people become better programmers by
 <!--  </tr>-->
 <!--  -->
   
-  <tr>
-    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
-      <strong>
-        Automation with Ant, Bash, Chef, Puppet, Travis, Jenkins
-      </strong>
-    </td>
-    <td style="padding-bottom: 0.5em; vertical-align:top; ">
-      <p>
-      Integrated continuous build and automated test systems with for rapid detection of development issues. Have used Cruise Control with Ant, and of Travis-CI for open source projects.</p>
-      <p>
-      Developed Ant scripts for building, automated testing and deploying of applications. Designed and implemented
-      plugin Ant tasks for custom processes e.g. Manipulating assets, packaging and deploying applications. <br>
+<!--  <tr>-->
+<!--    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">-->
+<!--      <strong>-->
+<!--        Automation with Ant, Bash, Chef, Puppet, Travis, Jenkins-->
+<!--      </strong>-->
+<!--    </td>-->
+<!--    <td style="padding-bottom: 0.5em; vertical-align:top; ">-->
+<!--      <p>-->
+<!--      Integrated continuous build and automated test systems with for rapid detection of development issues. Have used Cruise Control with Ant, and of Travis-CI for open source projects.</p>-->
+<!--      <p>-->
+<!--      Developed Ant scripts for building, automated testing and deploying of applications. Designed and implemented-->
+<!--      plugin Ant tasks for custom processes e.g. Manipulating assets, packaging and deploying applications. <br>-->
 
-      <p>
-      Written and used Bash scripts and associated tools in PHP to allow deployment of a web application including all database changes from a single command. Used Chef to create, configure and deploy to Amazon EC2 instances. These days though, I prefer to RPM everything and make deployment be as simple as possible.
-      </p>
-    </td>
-  </tr>
+<!--      <p>-->
+<!--      Written and used Bash scripts and associated tools in PHP to allow deployment of a web application including all database changes from a single command. Used Chef to create, configure and deploy to Amazon EC2 instances. These days though, I prefer to RPM everything and make deployment be as simple as possible.-->
+<!--      </p>-->
+<!--    </td>-->
+<!--  </tr>-->
 
 
   <tr>
@@ -150,16 +150,16 @@ I like to share my experience and help other people become better programmers by
     </td>
   </tr>
 
-  <tr>
-    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
-      <strong>
-        J2EE + Spring + Hibernate
-      </strong>
-    </td>
-    <td style="padding-bottom: 0.5em; vertical-align:top; ">
-      Developed internal web based application for managing product pricing.
-    </td>
-  </tr>
+<!--  <tr>-->
+<!--    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">-->
+<!--      <strong>-->
+<!--        J2EE + Spring + Hibernate-->
+<!--      </strong>-->
+<!--    </td>-->
+<!--    <td style="padding-bottom: 0.5em; vertical-align:top; ">-->
+<!--      Developed internal web based application for managing product pricing.-->
+<!--    </td>-->
+<!--  </tr>-->
 
   </tbody>
 </table>
@@ -221,8 +221,7 @@ I like to share my experience and help other people become better programmers by
       </strong>
     </td>
     <td style="padding-bottom: 0.5em; vertical-align:top; ">
-      Integrated continuous build and automated test systems with various CI systems for rapid detection of
-      development issues.
+      Integrated continuous build and automated test systems with various CI systems (Ant, Bash, Chef, Puppet, Travis, Jenkins) for rapid detection of development issues.
     </td>
   </tr>
   </tbody>
