Added feedback to joindin.

--- a/public/DockerLessonsLearned/index.html
+++ b/public/DockerLessonsLearned/index.html
@@ -816,12 +816,16 @@ Not great at cleaning everything up.
     <section>
       <h1 class="finale">Fin</h1>
 
-      <div style="text-align: center !important;"  >
+      <div class="em1_4" style="text-align: center !important;"  >
         github.com/danack/example
       </div>
 
       <div style="text-align: center !important;"  >
-        <a href="https://joind.in/talk/c5716 ">https://joind.in/talk/c5716 </a>
+        <img src="/images/docker_lessons_learned_wales.png" width="40%" />
+      </div>
+
+      <div style="text-align: center !important;">
+        <a href="https://joind.in/talk/d1add">https://joind.in/talk/d1add</a>
       </div>
 
     </section>
