--- a/public/CV.html
+++ b/public/CV.html
@@ -92,7 +92,7 @@ I like to share my experience and help other people become better programmers by
       </strong>
     </td>
     <td style="padding-bottom: 0.5em; vertical-align:top; ">
-      I use it make web pages have a good user experience. Apparently that's called Responsive Web Design these days.
+      I use it to make web pages have a good user experience. Apparently that's called Responsive Web Design these days.
     </td>
   </tr>
 
@@ -289,7 +289,7 @@ Led a small team of developers in migrating a legacy application to Google Cloud
 <ul>
   <li>Worked as part of Immediate Media's sports focused team to maintain their custom CMS.</li>
   <li>
-    Designed and built a prototype for a large api to be used for more engaging content related to cycling races.
+    Designed and built a prototype for a large API to be used for more engaging content related to cycling races.
   </li>
 
   <li>Planned and started the migration of a legacy site to a centralised platform.</li>
@@ -307,7 +307,7 @@ Led a small team of developers in migrating a legacy application to Google Cloud
 
 <ul>
   <li><p>Developed application backend in PHP and MySQL.</p></li>
-  <li><p>Designed and implemented front-end with Smarty templating system, Javascript and jQuery.</p></li>
+  <li><p>Designed and implemented front-end with Smarty templating system, JavaScript and jQuery.</p></li>
   <li><p>Wrote deployment scripts to deploy application upgrades and database changes in a single command.</p></li>
   <li><p>Helped design backend API for provisioning customer accounts, credit card billing, purchasing of inbound
     numbers.</p></li>
@@ -323,14 +323,14 @@ Led a small team of developers in migrating a legacy application to Google Cloud
 <ul>
   <li><p>Streamline the process of importing price data from our suppliers by intelligently interpreting spreadsheet
     data.</p></li>
-  <li><p>Hold data about the status of our suppliers connecitivity to allow our operations team to be able to support
+  <li><p>Hold data about the status of our suppliers connectivity to allow our operations team to be able to support
     our customers.</p></li>
   <li><p>Enable easy generation of price lists for SMS sent to different territories.</p></li>
 </ul>
 
 <h3>Premium Content platform (approx 12 months)</h3>
 
-<p>Developed content management system with intergrated keyword based scripting to allow end-users to puchase
+<p>Developed content management system with intergrated keyword based scripting to allow end-users to purchase
   content via SMS and web pages, to be billed by premium SMS.</p>
 
 <ul>
@@ -340,11 +340,11 @@ Led a small team of developers in migrating a legacy application to Google Cloud
     <ul>
       <li>Keyword based scripting tool for users to enter, use and opt-out of a service.</li>
       <li>Messages and keywords to be used for each service.</li>
-      <li>Editing of rules for service based on customer properies e.g. customers on Optus require 'spend reminders'
+      <li>Editing of rules for service based on customer properties e.g. customers on Optus require 'spend reminders'
         after $30 is spent.
       </li>
       <li>Customer service tool to allow support staff to see user interactions with the system to enable them to
-        explain what users will billed for, and to give refunds were appropriate.
+        explain what users will billed for, and to give refunds where appropriate.
       </li>
     </ul>
   </li>
@@ -407,7 +407,7 @@ Two months contract position at Web development company. Using PHP, implemented 
 
 <p>Joined as a junior programmer on Brian Lara Cricket. Designed and implemented code modules for data compression,
   event based commentary system, installation routines. Also responsible for source code version management. After one
-  project promoted to be the lead programmer in a team of 6 programmers, also responsible for task scheduling,
+  project, promoted to be the lead programmer in a team of 6 programmers, also responsible for task scheduling,
   interfacing with the design and marketing departments and reporting to the senior management.</p>
 
 <p>As a prototype programmer worked with game industry design guru Jon Hare to research both new games designs and
@@ -415,7 +415,7 @@ Two months contract position at Web development company. Using PHP, implemented 
 
 <h2>Sun Microsystems, Web Programmer July 1997 - November 1997</h2>
 
-<p>Worked as part of Suns World Wide Application Support team, creating a intranet site to give support for Suns
+<p>Worked as part of Sun's World Wide Application Support team, creating an intranet site to give support for Suns
   internal software systems. Used Perl to create a web based application to allow non-technical staff create and edit
   web documents.</p>
 
