--- a/public/CV.html
+++ b/public/CV.html
@@ -244,7 +244,7 @@ Developed a website <a href='http://phpimagick.com/'>phpmagick.com</a> to show w
 
 <h3>Auryn</h3>
 <p>
-Auryn <a href="https://github.com/rdlowrey/auryn">github.com/rdlowrey/auryn</a> is a recursive dependency injector, that can be used to bootstrap and wire together S.O.L.I.D. PHP applications. I helped design how this D.I.C. should work, as well as provide bug-fixes and write test cases. I spoke at the PHP South Coast confernce 2015 about how dependency injection makes code better. 
+Auryn <a href="https://github.com/rdlowrey/auryn">github.com/rdlowrey/auryn</a> is a recursive dependency injector, that can be used to bootstrap and wire together S.O.L.I.D. PHP applications. I helped design how this D.I.C. should work, as well as provide bug-fixes and write test cases. I spoke at the PHP South Coast conference 2015 about how dependency injection makes code better.
 </p>
 
 <!--<h3>Jig</h3>-->
