last minute words.

--- a/public/TechForChattingInGroups/index.html
+++ b/public/TechForChattingInGroups/index.html
@@ -274,6 +274,19 @@
     </section>
 
 
+    <!-- *************************** -->
+    <section>
+      <div style="text-align: center !important;" class="em1_8"  >
+        <h1>
+          Mute
+        </h1>
+      </div>
+      <aside class="notes">
+        when not talking.
+        absolutely must when away from computer.
+      </aside>
+    </section>
+
 
 
     <!-- *************************** -->
@@ -300,13 +313,13 @@
           Microphone
         </h1>
 
-        <div>Clarity !== pleasant sound</div>
+        <div>clarity !== pleasant sound</div>
 
       </div>
       <aside class="notes">
-        * Don't over tune your microphone. I hate
         * cognitive load regarding video and audio.
-
+        * Don't over tune your microphone. I hate the
+        * If I was more prepared I would have found out what my grandad did in the war.
       </aside>
     </section>
 
@@ -335,9 +348,8 @@
     <section>
       <div style="text-align: center !important;" class="em1_8"  >
         <h1>
-          Cameras + humans
+          Human eyes...
         </h1>
-
 
         <div style="text-align: center !important;" >
           <img src="/images/googleglassbrin.jpg" width="70%" />
@@ -398,6 +410,7 @@
         </ul>
       </div>
       <aside class="notes">
+        https://www.youtube.com/watch?v=kBifblbZcu8
       </aside>
     </section>
 
@@ -483,14 +496,9 @@
       <aside class="notes">
         Pandemics not going away no matter how little testing we do.
 
-        More socialising online.
+        Got to get better at socialising online.
       </aside>
     </section>
-
-
-
-
-
 
 
   </div>
